@@ -22,6 +22,7 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.mojang.datafixers.util.Pair;
+import java.util.List;
 import java.util.Optional;
 import net.frozenblock.lib.entity.behavior.api.FrozenBehaviorUtils;
 import net.frozenblock.wilderwild.entity.Jellyfish;
@@ -48,10 +49,10 @@ import net.minecraft.world.entity.schedule.Activity;
 
 public class JellyfishAi {
 
-    public static final ImmutableList<SensorType<? extends Sensor<? super Jellyfish>>> SENSOR_TYPES = ImmutableList.of(
+    public static final List<SensorType<? extends Sensor<? super Jellyfish>>> SENSOR_TYPES = List.of(
             SensorType.NEAREST_LIVING_ENTITIES, SensorType.NEAREST_PLAYERS
     );
-    public static final ImmutableList<? extends MemoryModuleType<?>> MEMORY_TYPES = ImmutableList.of(
+    public static final List<? extends MemoryModuleType<?>> MEMORY_TYPES = List.of(
             MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES,
             MemoryModuleType.LOOK_TARGET,
             MemoryModuleType.WALK_TARGET,
@@ -93,7 +94,7 @@ public class JellyfishAi {
 						TryFindWater.create(6, 0.15F),
 						new RunOne<>(
 								ImmutableMap.of(MemoryModuleType.WALK_TARGET, MemoryStatus.VALUE_ABSENT),
-								ImmutableList.of(
+								List.of(
 										Pair.of(BehaviorBuilder.triggerIf(jellyfish1 -> jellyfish1.getTarget() == null && jellyfish1.canRandomSwim(), FrozenBehaviorUtils.getOneShot(RandomStroll.swim(1.0F))), 2),
 										Pair.of(BehaviorBuilder.triggerIf(Entity::isInWaterOrBubble), 1),
 										Pair.of(BehaviorBuilder.triggerIf(Entity::isOnGround), 1)
@@ -125,7 +126,7 @@ public class JellyfishAi {
 
     public static void updateActivity(Jellyfish jellyfish) {
         Brain<Jellyfish> brain = jellyfish.getBrain();
-        brain.setActiveActivityToFirstValid(ImmutableList.of(Activity.FIGHT, Activity.IDLE));
+        brain.setActiveActivityToFirstValid(List.of(Activity.FIGHT, Activity.IDLE));
     }
 
     private static float getSpeedModifierChasing(LivingEntity livingEntity) {
